# grumpy_or_not

./: .gitattributes  pyproject.toml
docker/: .env  Dockerfile  docker-compose.yaml
tests/: sanity.sh
web_app/: app.py  gunicorn_prod.py
