[tool.poetry]
name = "grumpy-or-not"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "web_app"}]
include = ["models"]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "1.22.3"
flask = "^3.0.0"
gunicorn = "^21.2.0"
onnxruntime = "^1.16.2"
transformers = "^4.35.0"
tensorboardx = "^2.6.2.2"
simpletransformers = "^0.64.3"
torch = { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.1.0%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl" }

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[tool.poetry.scripts]
grumpy_or_not = "web_app.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
